--- a/starry/android/build.gradle
+++ b/starry/android/build.gradle
@@ -9,6 +9,8 @@ buildscript {
         maven{
             url "https://dl.bintray.com/lizixian/StarrySky/"
         }
+        maven { url "https://oss.jfrog.org/libs-snapshot" }
+        maven { url 'https://jitpack.io' }
     }
 
     dependencies {
@@ -24,6 +26,8 @@ rootProject.allprojects {
         maven{
             url "https://dl.bintray.com/lizixian/StarrySky/"
         }
+        maven { url "https://oss.jfrog.org/libs-snapshot" }
+        maven { url 'https://jitpack.io' }
     }
 }
 
@@ -47,7 +51,15 @@ android {
 dependencies {
     //noinspection GradleDependency
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.lzx:StarrySkyX:2.5.8'
+//    implementation 'com.lzx:StarrySkyX:2.5.8'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
-    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.github.jrfeng.snow:player:1.0.9'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+    implementation "com.google.guava:guava:30.1-android"
+
+    // RxJava2
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.19'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
 }
