--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,20 +22,18 @@ environment:
 
 dependencies:
   get:
-  sliding_up_panel:
-    path: sliding_up_panel
+#  sliding_up_panel:
+#    path: sliding_up_panel
   path_provider: ^2.0.1
   color_thief_flutter: ^1.0.2
   cached_network_image: ^3.0.0-nullsafety
   flutter_placeholder_textlines: ^1.0.4
   starry:
     path: starry
-  shared_preferences: ^2.0.3
+  shared_preferences: ^2.0.4
   cookie_jar: ^2.0.0
   encrypt: ^3.0.0
-  dartin: ^0.0.1
-  seekbar: ^0.0.2
-  wave_slider: ^0.2.0
+  dartin: ^0.1.5
   we_slide: ^2.0.0
   flutter:
     sdk: flutter
