--- a/starry/android/build.gradle
+++ b/starry/android/build.gradle
@@ -58,7 +58,7 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     implementation "com.google.guava:guava:30.1-android"
-
+    implementation 'com.github.jrfeng.snow:ui:1.0.4'
     // RxJava2
     implementation 'io.reactivex.rxjava2:rxjava:2.2.19'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
