完善用户资料以及登录流程

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -23,7 +23,8 @@
     <application
         android:name="io.flutter.app.FlutterApplication"
         android:icon="@mipmap/ic_launcher"
-        android:label="bujuan"
+        android:label="不倦"
+        tools:replace="android:label"
         android:usesCleartextTraffic="true"
         tools:targetApi="m">
         <activity
