--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   progress_state_button: ^1.0.2
   introduction_screen: ^2.0.0
   flutter_slidable: ^0.5.7
+  direct_select_flutter: ^1.1.0
   flutter:
     sdk: flutter
 
