--- a/starry/android/build.gradle
+++ b/starry/android/build.gradle
@@ -35,13 +35,14 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion 29
+    compileSdkVersion 30
 
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
     }
     defaultConfig {
         minSdkVersion 16
+        vectorDrawables.useSupportLibrary = true
     }
     lintOptions {
         disable 'InvalidPackage'
@@ -55,7 +56,6 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.github.jrfeng.snow:player:1.0.9'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     implementation "com.google.guava:guava:30.1-android"
     implementation 'com.github.jrfeng.snow:ui:1.0.4'
