--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,9 @@ dependencies:
   introduction_screen: ^2.0.0
   flutter_slidable: ^0.5.7
   direct_select_flutter: ^1.1.0
-  curved_navigation_bar: ^0.3.7
+  dot_navigation_bar: ^0.1.1
+  preload_page_view: ^0.1.5
+  bottom_navy_bar: ^5.6.0
   flutter:
     sdk: flutter
 
