本地音乐 搜索完善

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
-        android:name="io.flutter.app.FlutterApplication"
+        android:name="App"
         android:icon="@mipmap/ic_launcher"
         android:label="不倦"
         tools:replace="android:label"
