--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   progress_state_button: ^1.0.2
   direct_select_flutter: ^1.1.0
   on_audio_query: ^1.0.6
+
   flutter:
     sdk: flutter
 
@@ -63,6 +64,10 @@ flutter:
 
   assets:
     - assets/images/
+  fonts:
+    - family: iconfont
+      fonts:
+        - asset: assets/font/iconfont.ttf
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
