--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -75,4 +75,5 @@ flutter {
 
 dependencies {
     implementation 'com.android.support:multidex:1.0.3'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
 }
