--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  get: 4.6.5
+  get: ^4.6.5
   path: ^1.8.0
   pedantic: ^1.11.1
   encrypt: ^5.0.0
@@ -43,7 +43,8 @@ dependencies:
   path_provider: ^2.0.11
   flutter_screenutil: ^5.5.3+2
   extended_image: ^6.0.1
-
+  assets_audio_player: ^3.0.4+3
+  flutter_lyric: ^2.0.3
 
 dev_dependencies:
   flutter_test:
