--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,8 @@ dependencies:
   flutter_screenutil: ^5.5.3+2
   extended_image: ^6.0.1
   assets_audio_player: ^3.0.4+3
-  flutter_lyric: ^2.0.3
+  flutter_image_compress: ^1.1.0
+  palette_generator: ^0.3.3
 
 dev_dependencies:
   flutter_test:
