--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   assets_audio_player: ^3.0.4+3
   flutter_image_compress: ^1.1.0
   palette_generator: ^0.3.3
+  slider_controller: ^0.0.3
 
 dev_dependencies:
   flutter_test:
@@ -70,8 +71,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
