--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,7 +60,7 @@ dev_dependencies:
   flutter_lints: ^2.0.0
 
 # For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
+# following page: https://dart.dev/tools/pub/pubspec什么父亲啊？我怎么弄啊，你玩玩你号啊，你要让图吗？这周等了没办法。
 
 # The following section is specific to Flutter packages.
 flutter:
