--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   palette_generator: ^0.3.3
   on_audio_query:
     path: plugins/on_audio_query-2.6.1
+  vrouter: ^1.2.1
+  go_router: ^4.0.0
 
 dev_dependencies:
   flutter_test:
