--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -35,5 +35,22 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
-    </application>
+
+       <!-- ADD THIS "SERVICE" element -->
+       <service android:name="com.ryanheise.audioservice.AudioService"
+           android:foregroundServiceType="mediaPlayback"
+           android:exported="true" tools:ignore="Instantiatable">
+           <intent-filter>
+               <action android:name="android.media.browse.MediaBrowserService" />
+           </intent-filter>
+       </service>
+
+       <!-- ADD THIS "RECEIVER" element -->
+       <receiver android:name="com.ryanheise.audioservice.MediaButtonReceiver"
+           android:exported="true" tools:ignore="Instantiatable">
+           <intent-filter>
+               <action android:name="android.intent.action.MEDIA_BUTTON" />
+           </intent-filter>
+       </receiver>
+   </application>
 </manifest>
