--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,10 +51,15 @@ dependencies:
   just_audio: ^0.9.25
   audio_service: ^0.18.5
   get_it: ^7.2.0
+  auto_route: ^4.0.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  # 路由生成
+  auto_route_generator: ^4.0.0
+  build_runner:
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
