--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,6 @@ dependencies:
   path_provider: ^2.0.11
   flutter_screenutil: ^5.5.3+2
   extended_image: ^6.0.1
-  flutter_image_compress: ^1.1.0
   palette_generator: ^0.3.3
   on_audio_query: ^2.6.1
   just_audio: ^0.9.25
@@ -54,9 +53,10 @@ dependencies:
   just_waveform: ^0.0.3
   font_awesome_flutter: ^10.1.0
   wheel_slider: ^1.0.0
-#  jaudiotagger:
-#    path: ../jaudiotagger
+  jaudiotagger:
+    path: ../jaudiotagger
   flutter_lyric: ^2.0.4
+  tuna_flutter_range_slider: ^1.0.0
 
 dev_dependencies:
   flutter_test:
