--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,8 +53,8 @@ dependencies:
   just_waveform: ^0.0.3
   font_awesome_flutter: ^10.1.0
   wheel_slider: ^1.0.0
-  jaudiotagger:
-    path: ../jaudiotagger
+#  jaudiotagger:
+#    path: ../jaudiotagger
   flutter_lyric: ^2.0.4
   tuna_flutter_range_slider: ^1.0.0
   flutter_svg: ^1.1.0
