京中有善口技者

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,8 +46,8 @@ dependencies:
   extended_image: ^6.0.1
   palette_generator: ^0.3.3
   on_audio_query: ^2.6.1
-  just_audio: ^0.9.25
-  audio_service: ^0.18.5
+  just_audio: ^0.9.28
+  audio_service: ^0.18.7
   get_it: ^7.2.0
   loading_animation_widget: ^1.2.0+2
   dio: ^4.0.6
@@ -63,6 +63,8 @@ dependencies:
   tabler_icons:
     path: plugins/tabler-icons
   sliding_up_panel: ^2.0.0+1
+  lastfm: ^0.0.5
+  url_launcher: ^6.1.5
 
 dev_dependencies:
   flutter_test:
