--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,7 +68,6 @@ dependencies:
 #  jaudiotagger:
 #    path: ../jaudiotagger
   tuna_flutter_range_slider: ^1.0.0
-  flutter_svg: ^1.1.0
   modal_bottom_sheet: ^2.1.0
   tabler_icons:
     path: plugins/tabler-icons
@@ -79,6 +78,8 @@ dependencies:
   auto_route: ^5.0.4
   mobx: ^2.1.3
   sticky_headers: ^0.3.0+2
+  flutter_svg: ^1.1.6
+  fluttertoast: ^8.1.2
 
 
 dev_dependencies:
