--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,22 +36,29 @@ dependencies:
   cupertino_icons: ^1.0.2
   get: ^4.6.5
   shared_preferences: ^2.0.13
+  path: ^1.8.0
+#  pedantic: ^1.11.1
   encrypt: ^5.0.0
+#  collection: ^1.15.0-nullsafety.4
+#  cookie_jar: ^3.0.1
   path_provider: ^2.0.11
   flutter_screenutil: ^5.5.3+2
   extended_image: ^6.0.1
-  palette_generator: ^0.3.3
-  just_audio: ^0.9.30
+  palette_generator: ^0.3.3+2
+#  on_audio_query: ^2.6.1
+#  临时解决延迟加载音乐url的问题
+#  just_audio: ^0.9.30
   audio_service: ^0.18.8
+  audioplayers: ^1.1.1
+  audio_session: ^0.1.13
   get_it: ^7.2.0
   loading_animation_widget: ^1.2.0+2
   dio: ^4.0.6
   just_waveform: ^0.0.3
   font_awesome_flutter: ^10.1.0
   wheel_slider: ^1.0.0
+#  flutter_inappwebview: ^5.7.2+3
   qr_flutter: ^4.0.0
-  flutter_riverpod: ^2.1.1
-  riverpod_annotation: ^1.0.4
 
   # ext
   # app path
@@ -77,7 +84,6 @@ dependencies:
   sticky_headers: ^0.3.0+2
   flutter_svg: ^1.1.6
   fluttertoast: ^8.1.2
-  mobx: ^2.1.3
 
 
 dev_dependencies:
@@ -85,8 +91,6 @@ dev_dependencies:
     sdk: flutter
   auto_route_generator: 5.0.3
   build_runner:
-  riverpod_generator: ^1.0.4
-  mobx_codegen: ^2.1.1
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
