完善播放逻辑 解决drawer与其他页面的滑动冲突

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -58,6 +58,8 @@ android {
         release {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
+            minifyEnabled false
+            shrinkResources false
             signingConfig signingConfigs.debug
         }
     }
@@ -70,4 +72,5 @@ flutter {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.android.support:multidex:1.0.3'
+    implementation 'org.altbeacon:android-beacon-library:2.19.3'
 }
