--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,7 +77,7 @@ dependencies:
 #  tabler_icons:
 #    path: plugins/tabler-icons
   flutter_tabler_icons: ^1.1.2
-  sliding_up_panel: ^2.0.0+1
+#  sliding_up_panel: ^2.0.0+1
 #  url_launcher: ^6.1.5
 #  carousel_slider: ^4.1.1
   flutter_zoom_drawer: ^3.0.3
@@ -91,6 +91,11 @@ dependencies:
   octo_image: ^1.0.2
   cached_network_image: ^3.2.3
   carousel_slider: ^4.2.1
+  preload_page_view: ^0.1.6
+  auto_size_text: ^3.0.0
+  lottie: ^2.1.0
+  scaffold_gradient_background: ^1.0.3+1
+  aurora: ^1.0.0
 
 
 dev_dependencies:
@@ -120,6 +125,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/lottie/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
