--- a/android/build.gradle
+++ b/android/build.gradle
@@ -3,6 +3,9 @@ buildscript {
     repositories {
         google()
         mavenCentral()
+//        maven { url 'https://maven.aliyun.com/repository/google' }
+//        maven { url 'https://maven.aliyun.com/repository/jcenter' }
+//        maven { url 'https://maven.aliyun.com/nexus/content/groups/public' }
 
     }
 
@@ -16,7 +19,9 @@ allprojects {
     repositories {
         google()
         mavenCentral()
-
+//        maven { url 'https://maven.aliyun.com/repository/google' }
+//        maven { url 'https://maven.aliyun.com/repository/jcenter' }
+//        maven { url 'https://maven.aliyun.com/nexus/content/groups/public' }
     }
 }
 
