--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,7 @@ dependencies:
   flutter_screenutil: ^5.5.3+2
   extended_image: ^6.0.1
   palette_generator: ^0.3.3+2
-#  on_audio_query: ^2.6.1
+  on_audio_query: ^2.6.1
 #  临时解决延迟加载音乐url的问题
 #  just_audio: ^0.9.30
   audio_service: ^0.18.9
@@ -60,6 +60,8 @@ dependencies:
   wheel_slider: ^1.0.0
   qr_flutter: ^4.0.0
   marquee: ^2.2.3
+  keframe: ^3.0.0
+  date_format: ^2.0.7
 
   # ext
   # app path
