--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 2.0.0+21
+version: 2.0.1+22
 
 environment:
   sdk: ">=2.17.1 <3.0.0"
@@ -36,23 +36,24 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   get: ^4.6.5
-  shared_preferences: ^2.0.13
+  shared_preferences: ^2.0.17
   path: ^1.8.0
 #  pedantic: ^1.11.1
-  encrypt: ^5.0.0
+  encrypt: ^5.0.1
 #  collection: ^1.15.0-nullsafety.4
 #  cookie_jar: ^3.0.1
-  path_provider: ^2.0.11
-  flutter_screenutil: ^5.5.3+2
-  extended_image: ^6.0.1
+  path_provider: ^2.0.12
+  flutter_screenutil: ^5.6.1
+  extended_image: ^6.4.0
   palette_generator: ^0.3.3+2
   on_audio_query: ^2.6.1
+
   on_audio_edit:
     path: plugins/on_audio_edit
 #  临时解决延迟加载音乐url的问题
 #  just_audio: ^0.9.30
   audio_service: ^0.18.9
-  audioplayers: ^2.0.0
+  audioplayers: ^3.0.1
   audio_session: ^0.1.13
   get_it: ^7.2.0
 #  loading_animation_widget: ^1.2.0+2
@@ -62,24 +63,26 @@ dependencies:
 #  wheel_slider: ^1.0.0
   qr_flutter: ^4.0.0
 #  marquee: ^2.2.3
-  keframe: ^3.0.0
+#  keframe: ^3.0.0
   date_format: ^2.0.7
-#  just_audio: ^0.9.31
-
+  just_audio: ^0.9.31
+#  just_audio_cache: ^0.1.1
   # ext
   # app path
   # http
   pretty_dio_logger: ^1.1.1
   dio_cookie_manager: ^2.0.0
   # encrypt
-  pointycastle: ^3.1.2
+  pointycastle: ^3.6.2
   # x json
-  json_annotation: ^4.0.1
-  tuna_flutter_range_slider: ^1.0.0
+  json_annotation: ^4.8.0
+#  tuna_flutter_range_slider: ^1.0.0
   flutter_tabler_icons: ^1.1.2
   url_launcher: ^6.0.14
   package_info_plus: ^3.0.2
   flutter_zoom_drawer: ^3.0.3
+  flutter_advanced_drawer: ^1.3.3
+  keframe: ^3.0.0
   auto_route: ^5.0.4
 #  sticky_headers: ^0.3.0+2
   flutter_svg: ^1.1.6
@@ -92,18 +95,22 @@ dependencies:
   preload_page_view: ^0.1.6
   auto_size_text: ^3.0.0
   lottie: ^2.1.0
-  aurora: ^1.0.0
+#  aurora: ^1.0.0
   pull_to_refresh: ^2.0.0
   notification_permissions: ^0.6.1
   video_player: ^2.4.10
   audio_video_progress_bar: ^0.11.0
   adaptive_dialog: ^1.8.0+1
+  liquid_swipe: ^3.0.0
+#  smooth:
+#    path: plugins/flutter_smooth/packages/smooth
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  auto_route_generator: 5.0.3
+#  auto_route_generator: 5.0.3
+  mobx_codegen: ^2.1.1
   build_runner:
 
   # The "flutter_lints" package below contains a set of recommended lints to
@@ -116,6 +123,11 @@ dev_dependencies:
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
+#dependency_overrides:
+#  sky_engine:
+#    path: ../engine/src/out/host_debug_unopt/gen/dart-pkg/sky_engine
+#  smooth:
+#    path: plugins/flutter_smooth/packages/smooth
 # The following section is specific to Flutter packages.
 flutter:
 
@@ -142,14 +154,14 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-    - family: iconfont
-      fonts:
-        - asset: assets/font/iconfont.ttf
+#    - family: iconfont
+#      fonts:
+#        - asset: assets/font/iconfont.ttf
     - family: tabler-icons
       fonts:
         - asset: assets/font/tabler.ttf
           style: normal
-          weight: 400
+          weight: 600
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
