优化播放页面和侧滑动画;解决部分机型锁60帧率的问题;自定义背景;缓存歌曲;开启高音质选项(不是破解版，需要会员);新增滑动切歌;修复部分酷友提交的bug;

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -81,6 +81,8 @@ dependencies:
     path: plugins/media_cache_manager
   image_picker: ^0.8.6+1
   flutter_displaymode: ^0.5.0
+  slide_countdown: ^0.5.0
+  permission_handler: ^8.2.0
 #  image_picker: ^0.8.6+1
 #  smooth:
 #    path: plugins/flutter_smooth/packages/smooth
