优化播放页面和侧滑动画;解决部分机型锁60帧率的问题;自定义背景;缓存歌曲;开启高音质选项(不是破解版，需要会员);新增滑动切歌;修复部分酷友提交的bug;

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -35,6 +35,12 @@
 	</dict>
 	<key>NSAppleMusicUsageDescription</key>
 	<string>..Add a reason..</string>
+	<key>NSCameraUsageDescription</key>
+    <string>Used to demonstrate image picker plugin</string>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>Used to capture audio for image picker plugin</string>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>Used to demonstrate image picker plugin</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>audio</string>
