--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,7 +77,7 @@ dependencies:
   flutter_riverpod: ^2.4.10
   go_router: ^13.2.0
   riverpod_annotation: ^2.3.4
-
+  animated_background: ^2.0.0
 
 dev_dependencies:
   flutter_test:
