--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,13 +71,12 @@ dependencies:
   hive_flutter: ^1.1.0
   flutter_zoom_drawer: ^3.1.1
   window_manager: ^0.3.4
-#  flutter_rust_bridge: ^1.77.1
-#  ffi: ^2.0.2
   android_intent_plus: ^4.0.1
   flutter_riverpod: ^2.4.10
   go_router: ^13.2.0
   riverpod_annotation: ^2.3.4
   animated_background: ^2.0.0
+  flutter_card_swiper: ^7.0.0
 
 dev_dependencies:
   flutter_test:
